Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o 18185 UnSubscribeQos.CP_ASYNC_UNSUBSCRIBE_WITHOUT_SUBSCRIPTIONID_ALLOWED 
     and connectQos.setTrySyncMode(false) added to allow async client operation even if ALIVE

 o 18183 connectQos.setTrySyncMode() added
     to force client side queue always to async delivery
     Like this publishes are always locally queued and removed after server ACK

 o 18177  20154-08-27 StringPairTokenizer.java
          Changed semicolon ; escape to %3B, until 2014-08-27 it was %53

 o 18167  2014-06-24
          Added SubscribeQos ClientProperty __newestOnly
          If set __newestOnly=true, xmlBlaster throws away all oder messages of this
          topic which are in the callback queue of the subscriber and delivers only the most current.
	  This use case is useful for mobile clients being off line for longer periods and
	  the topic delivers complete updates of some information.
	  The client don't wants to receive the outdated older updates.
	  Added toString() variants for easier debugging.

 o 18166  2014-06-17
          StringPairTokenizer fix preserveInsideQuoteChar=true with ending apos "
          StringPairTokenizer fix one \n too much for csv with ending apos "

Changes for 2.2.0 [2014-06-09] r18164 (JDK >= 1.5 only)
=======================================================

 o 18155  StringPairTokenizer fix to convert "%53" to ";"

 o 18153  added CLIENTPROPERTY_MULTISUB_CHECKQOS to allow recognition of different filters on subscriptions having 
          the same XPATH or topic (without it making two subs with same XPATH but different filter would overwrite 
          eachother

 o 18149  EventPlugin protect against infinite loop of logging redirects
          logInfinitLoopSuppressDelayMillis=1000
	  -> Log messages inbetween one second are silently lost

 o r18147 made XPathFilter namespace-aware
